@startuml
object full_name {
  * first_name : text
  * last_name: text
  middle_name: text
}

entity User {
  * id : uuid <<generated>>
  __
  * email : text
  * full_name : full_name
  * password : text
  * role_id : number <<FK>>
  * is_active : boolean
  direction_id : number <<FK>>
}

entity Role {
  * id : number <<generated>>
  __
  * name : text
}

entity Permission {
  * id : number <<generated>>
  __
  * name : text
}

entity Direction {
  * id : number <<generated>>
  __
  * name : text
}

entity Role_Permission {
  * id: number <<generated>>
  __
  * role_id: number <<FK>>
  * permission_id: number <<FK>>
}

User }|--|| Role
User }|--o| Direction
Role ||--|{ Role_Permission
Permission ||--|{ Role_Permission
@enduml